--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "8.1 || ^8.2",
         "guzzlehttp/guzzle": "^7.2",
         "kreait/laravel-firebase": "^5.9",
         "laravel/fortify": "^1.21",
